  * lib/Lintian/Output{,/*}.pm:
    + [NT] Replace non-printables with "?" in output.
  * lib/Lintian/Profile.pm:
    + [NT] Normalize profile name and replace "parents" with
      "profile_list".  The latter also includes the current profile
      name.
  * lib/Lintian/Tag/Info.pm:
    + [NT] Use Lintian::Data to load the manual-references data
      file instead using an ad-hoc parser.
  * lib/Util.pm:
    + [JW] Consider duplicate fields a syntax error in dctrl files.
      Previously, duplicate fields were silently ignored (except
      when a separate tag would check for it).  (Closes: #664061)

  * profiles/ubuntu/main.profile:
    + [NT] Add a number of NMU related tags to the list of disabled
      tags.

  * vendors/ubuntu/main/data/changes-file/known-dists:
    + [NT] New file based on data/changes-file/ubuntu-dists.
  * vendors/ubuntu/main/data/common/source-fields:
    + [NT] New file.
  * vendors/ubuntu/main/data/fields/{binary,udeb}-fields:
    + [NT] New files.

 -- Niels Thykier <niels@thykier.net>  Wed, 14 Mar 2012 22:55:46 +0100

lintian (2.5.6) unstable; urgency=low

  * checks/*:
    + [NT] Simplified some bit operations done on file permissions.
  * checks/binaries:
    + [NT] Fix false-negative missing-dependency-on-phpapi when the
      binary included a "SOVERSION" in its name.  Thanks to Ondřej
      Surý for the report.  (Closes: #662936)
  * checks/changelog-file:
    + [NT] Do not emit "no-upstream-changelog" for transitional
      packages.  Thanks to Paul Wise for the report.
      (Closes: #660076)
  * checks/cruft:
    + [NT] Added missing "unless" in the code.  Fixes false
      positive "source-contains-waf-binary".  Thanks to
      Dmitrijs Ledkovs for the report.  (Closes: #661561)
  * checks/debhelper:
    + [NT] Fix FP executable-debhelper-file-without-being-executable
      emitted for directories.  Thanks to Felix Geyer for the report
      and the patch.  (Closes: #663447)
  * checks/files.desc: