@@ -140,6 +140,8 @@ lintian (2.5.7) UNRELEASED; urgency=low
   * lib/Lintian/Tag/Info.pm:
     + [NT] Use Lintian::Data to load the manual-references data
       file instead using an ad-hoc parser.
+  * lib/{Text_utils => Lintian/Tag/TextUtil}.pm:
+    + [NT] Renamed module.
   * lib/Util.pm:
     + [JW] Consider duplicate fields a syntax error in dctrl files.
       Previously, duplicate fields were silently ignored (except
